NYCCHKBK-6053 - Updated css for centered aligned columns in the widget to fix the vertical alignment of the header column and fixed child contracts alignment
Former-commit-id: 19a02b6f8f90a838a0dcbc89d64e6b059be9893f [formerly 19a02b6f8f90a838a0dcbc89d64e6b059be9893f [formerly 19a02b6f8f90a838a0dcbc89d64e6b059be9893f [formerly 6728cb3857ccfd965c88eb24041e1d2db3fab875]]]
Former-commit-id: ad3cfa6416c68fff76305b9f580396e74a1a3933
Former-commit-id: 0589815303978fe34427a5d0cb6f6a6054cf9c62
Former-commit-id: 0c46028d012b4c0aabda8194dcf01d251be154f5

--- a/source/webapp/sites/all/themes/checkbook3/css/global.css
+++ b/source/webapp/sites/all/themes/checkbook3/css/global.css
@@ -1807,6 +1807,8 @@ td.pad-left div{
 .dataTable th.number-center div {
     display:block;
     text-align:center;
+    float:right;
+    padding-right: 10px;
 }
 .dataTable td div {
     margin: 13px 0px 13px 0px;
